# algoTrading

./: .gitignore  PRD.md  PRD2.md  README.md  deep-research-report.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py
app/domain/: enums.py  schemas.py
app/services/: account.py  ai.py  alerts.py  audit.py  auth.py  backtesting.py  indicators.py  live.py  market.py  persistence.py  reports.py  repository.py  risk.py  signals.py  simulator.py
frontend/: index.html  package.json
frontend/src/: main.jsx  styles.css
tests/: test_api.py  test_risk_and_simulator.py
