[project]
name = "algo-trading-platform"
version = "0.1.0"
description = "AI-driven NIFTY options paper trading MVP with Upstox and Ollama integration points."
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
